--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ article.media-post > footer ul {
 
 #modal {
   border-radius: 10px;
-  background-color: maroon;
+  background-color: rgb(128, 2, 0);
   color: white;
 
   margin: 1em;
@@ -58,7 +58,7 @@ article.media-post > footer ul {
 }
 
 .activated-heart {
-  color: red;
+  color: rgb(255, 4, 0);
 }
 
 .hidden {
